--- a/style.css
+++ b/style.css
@@ -2,3 +2,22 @@ body {
  background-image: url("照片/2.jpg");
  background-color: #cccccc;
 }
+
+h1{
+  color: black;
+  line-height: 150%;
+  background-color:rgba(255,255,0,0.25);
+}
+h2{
+  text-align: center;
+  color: navy;
+  text-shadow: 2px 2px lightsteelblue;
+}
+
+h3{
+  text-align: center;
+}
+
+p{
+  text-align: center;
+}
