--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
  background-image: url("照片/2.jpg");
  background-color: #cccccc;
+ border: solid 30px transparent;
 }
 
 h1{
@@ -8,6 +9,7 @@ h1{
   line-height: 150%;
   background-color:rgba(255,255,0,0.25);
 }
+
 h2{
   text-align: center;
   color: navy;
@@ -20,4 +22,17 @@ h3{
 
 p{
   text-align: center;
+}
+
+
+.carousel-inner .item img {
+  width: 25%;
+}
+.carousel-inner > .item > img {
+  width: 25%;
+  height: auto;
+}
+.carousel {
+  width: 25%;
+  height: auto;
 }
