--- a/style.css
+++ b/style.css
@@ -32,7 +32,17 @@ p{
   width: 28%;
   height: auto;
 }
-.carousel {
-    width:28%;
+.carousel{
+  width:28%;
+  height:auto;
+}
+
+#carouselEnd{
+    width:100%;
     height: auto;
+}
+
+.img-responsive{
+  width:100%;
+  height:auto;
 }
