--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ h1{
 
 h2{
   text-align: center;
-  color: navy;
-  text-shadow: 2px 2px lightsteelblue;
+  color: rgb(14, 14, 71);
 }
 
 h3{
@@ -47,4 +46,77 @@ p{
 .img-responsive{
   width:100%;
   height:auto;
+}
+
+.icon-container {
+  display: flex;
+  justify-content: flex-end;
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.icon-container span {
+  margin-left: 20px;
+}
+
+.icon-container span:first-child {
+  margin-left: 0;
+}
+
+.form-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+.fields {
+  margin-bottom: 20px;
+}
+
+.field {
+  margin-bottom: 10px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-sizing: border-box;
+}
+
+.actions {
+  text-align: center;
+}
+
+input[type="submit"] {
+  padding: 10px 20px;
+  background-color: #2e6cc9;
+  color: #ffffff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+.footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(229, 244, 191);
+  color: rgba(25, 19, 19, 0.879);
+  text-align: center;
 }
