--- a/style.css
+++ b/style.css
@@ -1,6 +1,33 @@
 body {
- background-image: url("照片/2.jpg");
- background-color: #cccccc;
+  background-image: url("照片/2.jpg");
+  background-color: #cccccc;
+}
+
+.full-page-image {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  text-align: left;
+  color: white;
+  z-index: 1; /* the overlay appears above the image */
+}
+.overlay h1 {
+  color: white;
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  background-color: transparent;
+  text-align: left;
+}
+.overlay p {
+  font-size: 1.5rem;
+  text-align: left;
 }
 
 h1{
@@ -61,6 +88,14 @@ p{
 
 .icon-container span:first-child {
   margin-left: 0;
+}
+
+.icon-container a {
+  color: rgba(140, 139, 139, 0.879);
+}
+
+.icon-container a:hover {
+  color: rgba(56, 47, 47, 0.879);
 }
 
 .form-container {
