--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+  /* font-family: inherit; */
+}
+
 body {
   background-image: url("照片/2.jpg");
   background-color: #cccccc;
@@ -10,24 +15,49 @@ body {
 }
 
 .overlay {
-  position: absolute;
-  top: 50%;
-  left: 25%;
-  transform: translate(-50%, -50%);
+  position: relative;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -210%); 
   text-align: left;
   color: white;
   z-index: 1; /* the overlay appears above the image */
+  width: 90%;
+  max-width: 1100px;
+  /* border: 2px solid red; */
 }
 .overlay h1 {
   color: white;
   font-size: 3rem;
-  margin-bottom: 1rem;
   background-color: transparent;
   text-align: left;
 }
 .overlay p {
   font-size: 1.5rem;
   text-align: left;
+  overflow: hidden;
+}
+
+.typed-text {
+  font-weight: normal;
+  color: white;
+}
+.cursor {
+  display: inline-block;
+  width: 3px;
+  background-color: #ccc;
+  margin-left: 0.1rem;
+  animation: blink 1s infinite;
+}
+.cursor.typing {
+  animation: none;
+}
+@keyframes blink {
+  0% {background-color: #ccc;}
+  49% {background-color: #ccc;}
+  50% {background-color: transparent;}
+  99% {background-color: transparent;}
+  100% {background-color: #ccc;}
 }
 
 h1{
@@ -91,7 +121,7 @@ p{
 }
 
 .icon-container a {
-  color: rgba(140, 139, 139, 0.879);
+  color: rgba(94, 92, 92, 0.879);
 }
 
 .icon-container a:hover {
