--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
   /* font-family: inherit; */
+  font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 body {
@@ -18,7 +19,7 @@ body {
   position: relative;
   top: 10%;
   left: 50%;
-  transform: translate(-50%, -260%); 
+  transform: translate(-50%, -280%); 
   text-align: left;
   color: white;
   z-index: 1; /* the overlay appears above the image */
@@ -64,12 +65,14 @@ h1{
   border: solid 10px transparent;
   color: black;
   line-height: 150%;
-  /* background-color:rgba(255,255,0,0.25); */
 }
 
-h2{
-  text-align: center;
-  color: rgb(14, 14, 71);
+h2 {
+  text-align: left;
+  color: rgb(30, 30, 130);
+  margin-right: 30px;
+  margin-left: 30px;
+  /* border: 1px solid #be0707; */
 }
 
 h3{
@@ -77,8 +80,12 @@ h3{
 }
 
 .container p {
+  font-size: 19px;
   text-align: left;
   text-indent: 0px;
+  margin-right: 30px;
+  margin-left: 30px;
+  /* border: 1px solid #be0707; */
 }
 
 #carouselEnd{
@@ -102,8 +109,13 @@ h3{
 }
 
 .img-responsive{
+  margin-top: -20px;
   width:100%;
   height:auto;
+}
+
+.with-box-shadow {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .icon-container {
@@ -130,12 +142,15 @@ h3{
 }
 
 .form-container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
+  padding: 40px;
+  border: 1px solid #cfcfcf;
   border-radius: 5px;
-  background-color: #f9f9f9;
+  margin-left: 30px;
+}
+#contact-title {
+  color: rgb(30, 30, 130);
+  margin-left: 30px;
+  border: 1px solid #ffffff;
 }
 
 .fields {
@@ -182,7 +197,8 @@ input[type="submit"]:hover {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: rgb(229, 244, 191);
+  /* background-color: rgb(229, 244, 191); */
+  background-color: #f8f9fa;
   color: rgba(25, 19, 19, 0.879);
 }
 .footer p {
