--- a/style.css
+++ b/style.css
@@ -70,7 +70,6 @@ h2 {
   color: rgb(30, 30, 130);
   margin-right: 30px;
   margin-left: 30px;
-  /* border: 1px solid #be0707; */
 }
 
 h3 {
@@ -85,10 +84,10 @@ li {
   color: rgb(57, 154, 250);
 }
 
-.row {
-  /* border: 1px solid #be0707; */
+.container {
+  width: 100%;
+  display:contents;
 }
-
 .container p {
   font-size: 19px;
   text-align: left;
@@ -96,6 +95,21 @@ li {
   margin-right: 30px;
   margin-left: 30px;
 }
+
+.row {
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 50px;
+  padding-bottom: 70px;
+  /* border: 1px solid #be0707; */
+}
+.row.bg-white {
+  background-color: white;
+}
+.row.bg-grey {
+  background-color: #f8f9fa;
+}
+
 
 #carouselEnd{
     width:100%;
@@ -113,41 +127,39 @@ li {
 }
 
 #carouselpp{
-  width:100%;
+  width: 100%;
   height: auto;
 }
 
 .img-responsive{
   width:100%;
   height:auto;
+  margin-top: -20px;
 }
 
 .with-box-shadow {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
-
 .icon-container {
   display: flex;
   justify-content: flex-end;
   max-width: 300px;
   margin: 0 auto;
 }
-
 .icon-container span {
   margin-left: 20px;
 }
-
 .icon-container span:first-child {
   margin-left: 0;
 }
-
 .icon-container a {
-  color: rgba(94, 92, 92, 0.879);
+  color: rgba(118, 116, 116, 0.879);
+}
+.icon-container a:hover {
+  /* color: rgba(56, 47, 47, 0.879); */
+  color: #343a40;
 }
 
-.icon-container a:hover {
-  color: rgba(56, 47, 47, 0.879);
-}
 
 .form-container {
   padding: 40px;
@@ -155,20 +167,16 @@ li {
   border-radius: 5px;
   margin-left: 30px;
 }
-
 .fields {
   margin-bottom: 20px;
 }
-
 .field {
   margin-bottom: 10px;
 }
-
 label {
   display: block;
   margin-bottom: 5px;
 }
-
 input[type="text"],
 textarea {
   width: 100%;
@@ -177,11 +185,9 @@ textarea {
   border-radius: 3px;
   box-sizing: border-box;
 }
-
 .actions {
   text-align: center;
 }
-
 input[type="submit"] {
   padding: 10px 20px;
   background-color: #2e6cc9;
@@ -190,10 +196,10 @@ input[type="submit"] {
   border-radius: 3px;
   cursor: pointer;
 }
-
 input[type="submit"]:hover {
   background-color: #0056b3;
 }
+
 
 .copyright {
   position: relative;
@@ -201,7 +207,8 @@ input[type="submit"]:hover {
   bottom: 0;
   width: 100%;
   background-color: #f8f9fa;
-  color: rgba(25, 19, 19, 0.879);
+  /* color: rgba(25, 19, 19, 0.879); */
+  color: #343a40;
 }
 .copyright p {
   text-align: center;
