--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 body {
@@ -20,7 +20,6 @@ body {
   color: white;
   z-index: 1;
   max-width: 500px;
-  /* border: 2px solid red; */
 }
 .overlay h1 {
   color: white;
@@ -104,11 +103,14 @@ li {
 }
 
 .intro-effect {
-  /* color: rgb(57, 154, 250); */
-  color: #2e6cc9;
+  color: #0056b3;
+  text-emphasis: open rgba(90, 200, 160, 0.8);
+  text-emphasis-position: under;
 }
 .intro-effect:hover {
   color: #0056b3;
+  text-emphasis: filled white;
+  text-decoration: none;
 }
 
 .container {
@@ -128,7 +130,6 @@ li {
   padding-right: 100px;
   padding-top: 50px;
   padding-bottom: 70px;
-  /* border: 1px solid #be0707; */
 }
 .row.bg-white {
   background-color: white;
@@ -138,35 +139,10 @@ li {
 }
 
 
-#carouselEnd{
-    width:100%;
-    height: auto;
-}
-
-#carouselp{
-  width:75%;
-  height: auto;
-}
-
-#carouselr{
-  width:70%;
-  height: auto;
-}
-
-#carouselpp{
-  width: 100%;
-  height: auto;
-}
-
 .img-responsive{
   width:100%;
   height:auto;
   margin-top: -20px;
-}
-.img-proj{
-  width: 100%;
-  height: auto;
-  display: block;
 }
 
 .with-box-shadow {
@@ -238,9 +214,41 @@ input[type="submit"]:hover {
   bottom: 0;
   width: 100%;
   background-color: #f8f9fa;
-  /* color: rgba(25, 19, 19, 0.879); */
   color: #343a40;
 }
 .copyright p {
   text-align: center;
 }
+
+
+.timeline {
+  position: relative;
+  max-width: 800px;
+  margin: 50px auto;
+}
+.timeline-item {
+  padding: 20px;
+  border-left: 2px solid #ccc;
+  position: relative;
+}
+.timeline-item::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -6px;
+  width: 10px;
+  height: 10px;
+  background-color: #ccc;
+  border-radius: 50%;
+  border: 2px solid #fff;
+}
+.timeline-content {
+  margin-left: 20px;
+}
+.timeline-content p {
+  font-size: 20px;
+}
+.timeline-date {
+  font-style: italic;
+  color: #999;
+} 
