add photopage outline

--- a/style.css
+++ b/style.css
@@ -143,7 +143,42 @@ li {
   width:100%;
   height:auto;
   margin-top: -20px;
+  border-radius:2%;
 }
+.featured-image {
+  display: block; 
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 85%; 
+  border-radius:2%;
+}
+
+
+.photo-container {
+  display: flex;
+  justify-content: space-between;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 2%;
+}
+.photo-container img {
+  width: 32%;
+  border-radius: 2%;
+}
+@media screen and (max-width: 768px) {
+  .photo-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .photo-container img {
+    width: 85%;
+    margin-bottom: 20px;
+  }
+}
+
+
+
 
 .with-box-shadow {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
